k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-assessment
  labels:
    app.kubernetes.io/name: employee-assessment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: employee-assessment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: employee-assessment
    spec:
      containers:
        - name: employee-assessment
          image: evgendas/employee-assessment:1.1.20
          ports:
            - containerPort: 8099
