k8s/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
  labels:
    app.kubernetes.io/name: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pg
    spec:
      containers:
        - name: pg
          image: postgres:16
          ports:
            - containerPort: 5432
              name: pg
