k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-assessment
  labels:
    app.kubernetes.io/name: pg
spec:
  selector:
    app.kubernetes.io/name: employee-assessment
  ports:
    - protocol: TCP
      port: 8099
      targetPort: app
      name: employee-assessment
