k8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg
  labels:
    app.kubernetes.io/name: pg
spec:
  selector:
    app.kubernetes.io/name: pg
  ports:
    - protocol: TCP
      port: 5432
      targetPort: pg
      name: pg
